# GitSwitch-Gui

./: GitSwitch.md  README.md  Story.md  package-lock.json  package.json
.github/workflows/: main.yml
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
