[package]
name = "GitSwitch"
version = "0.1.0"
description = "A git user management software to handle multiple git accounts , making seting up and handling git accout easier to manage , add git accounts via GUI , delete accounts , switch between accouts and other operations.... "
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde_json = "1"
dirs = "4.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
